package org.labs.sistemabiblyjava.entities;

import jakarta.persistence.*;
import lombok.Data;
import lombok.NoArgsConstructor;

@Entity
@Table(name = "situacaoemprestimo")
@Data
@NoArgsConstructor
public class SituacaoEmprestimo {

    @Id
    @GeneratedValue(strategy = GenerationType.AUTO)
    private Long id;

    private String descricao;
}


