@startuml

skinparam linetype ortho
top to bottom direction

    class Livro{
        - id: Long
        - nome: String
        - ISBN: String
        - genero: String
        - autor: String
        - idioma: String
        - altura: String
        - largura: String
        - edicao: String
        - dataEdicao: LocalDate
    }

    class Emprestimo{
        - id: Long
        - dataEmprestimoEm: DateTime
        - prazoDevolucao: DateTime
        - dataDevolucao: DateTime
    }

    class Cliente{
        - id: Long
        - nome: String
        - sobrenome: String
        - dataNascimento: Date
        - genero: String
        - endereco; String
        - CPF: string
        - responsavel: String
        - cpfResponsavel: String
        - comprovanteResidencia: Blob
        - certidaoNascimento: Blob
        - rg: String
        - numeroTelefone: String
        - foto: Blob
    }

    class Reserva{
        - id: Long
        - dataSolicitacao: LocalDate
        - dataEmprestimoEm: LocalDate
        - prazoDevolucao: LocalDate
    }

    class SituacaoReserva<<Setting>>{
        - id: Long
        - descricao: String
    }

'    class SituacaoLivro<<Setting>>{
'
'        - id: Long
'        - descricao: String
'    }
'
'    class SituacaoSolicitante<<Setting>>{
'        - id: Long
'        - descricao: String
'    }
    class SituacaoEmprestimo<<Setting>>{
        - id: Long
        - descricao: String
    }

    class Colecao<<Setting>>{
        - id: Long
        - descricao: String
    }

    class ComprovanteDevolucao{
        - id: Long
        - nomeCliente: String
        - dataDevolucao: LocalDate
        - livroNome: String
        - numeroNotaFiscal: String
    }

    class Editora {
        - id: Long
        - nomeEditora: String
        - endereco: String
        - numeroTelefone: String
    }


    note right of SituacaoReserva : CANCELADA/EM ESPERA/ATENDIDA/RECUSADA
'    note right of SituacaoSolicitante : SEM PENDENCIA/PRECISA DEVOLVER
'    note left of SituacaoLivro : EMPRESTADO/EM ESTOQUE
    note left of SituacaoEmprestimo: AGUARDANDO DEVOLUÇÃO/ENTREGE NO PRAZO/ENTREGE FORA DO PRAZO


    Emprestimo "0..*"-u-o "2" Livro
    Emprestimo "0..*" -u-o "1" Cliente
    Reserva "0..*" --o "1" Cliente
    Reserva "0..*" --o "2" Livro
    Reserva  "0..*" --> "1" SituacaoReserva
'    Solicitante "0..*" --> "1" SituacaoSolicitante
'    Livro "0..*" --> "1" SituacaoLivro
    Emprestimo "0..*" --> "1" SituacaoEmprestimo
    Livro "0..*" --> "1" Colecao
    Livro "1" --> "1" Editora
    Emprestimo "1" --> "1" ComprovanteDevolucao


@enduml
